Pod com configMap.yml
# Pod com configMap

##   Create a Pod named pod1 of image nginx:alpine
##   Make key tree of ConfigMap trauerweide available as environment variable TREE1
##   Mount all keys of ConfigMap birke as volume. The files should be available under /etc/birke/*
##   Test env+volume access in the running Pod


apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  containers:
  - image: nginx:alpine
    name: pod1
    resources: {}
    volumeMounts:
    - name: birke
      mountPath: /etc/birke

  volumes:
  - name: birke
    configMap:
      name: birke


  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

                                                                                                                                                                                                   
~                                                                                                                                                                                                                     
~
