nginx-init-container-git.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-git
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: data  
  volumes:    
  - name: data
    emptyDir: {}
